--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -6,4 +6,14 @@ body {
 #game-screen{
     display: block;
 }
+#gameOver{
+    position: absolute;
+    visibility: hidden;
+}
 
+
+
+#startGame{
+    position: absolute;
+    visibility: hidden;
+}
